# dejensen

./: .gitignore  Makefile  README.md  pyproject.toml
src/dejensen/: __init__.py  cli.py  downloader.py  gap_detector.py  speed_calculator.py  transcriber.py  video_editor.py
src/dejenson/: __init__.py  cli.py  downloader.py  gap_detector.py  transcriber.py
src/dejensonify/: cli.py  gap_detector.py  video_editor.py
tests/: test_gap_detector.py  test_speed_calculator.py  test_transcriber.py
